syntax = "proto3";

package kallax.tracker;

import "ChainMetadata.proto";

service ChainSpecService {
  rpc Get(GetChainSpecRequest) returns (GetChainSpecResponse);
}

message GetChainSpecRequest { ChainMetadata metadata = 1; }
message GetChainSpecResponse {
  ChainMetadata metadata = 1;
  ChainSpec spec = 2;
}

message ChainSpec { bytes data = 1; }
